--- a/bucket/app/css/main.css
+++ b/bucket/app/css/main.css
@@ -2,3 +2,29 @@
 #ww_8fcdae3b12d80 .ww_info {display: none;}
 #ww_8fcdae3b12d80:lang(ar) { direction: rtl; 
 }
+  #logedin {
+    display: flex;
+    align-items: center;
+    width: 100%;
+  }
+  .profile-container {
+    display: flex;
+    align-items: center;
+    padding:10px;
+    border-radius: 10px;
+  }
+  .profile-picture img {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 2px solid #212121;
+    margin-right: 20px;
+  }
+  .profile-info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    font-size: 1em;
+    color: white;
+  }
