--- a/bucket/app/css/main.css
+++ b/bucket/app/css/main.css
@@ -7,13 +7,13 @@
     align-items: center;
     width: 100%;
   }
-  .profile-container {
+   #logedin .profile-container {
     display: flex;
     align-items: center;
     padding:10px;
     border-radius: 10px;
   }
-  .profile-picture img {
+   #logedin .profile-picture img {
     width: 70px;
     height: 70px;
     border-radius: 50%;
@@ -21,7 +21,7 @@
     border: 2px solid #212121;
     margin-right: 20px;
   }
-  .profile-info {
+   #logedin .profile-info {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
