--- a/bucket/app/css/dark-flatpickr.css
+++ b/bucket/app/css/dark-flatpickr.css
@@ -2,7 +2,7 @@
          /* === End Corrected Input and Select Styles === */
 
 
-        .flatpickr-calendar { background-color: #222 !important; color: #ffc207 !important; border-radius: 10px !important; border: 1px solid #333 !important; box-shadow: 0 0 20px rgba(0, 0, 0, 0.5) !important; }
+        .flatpickr-calendar { background-color: #525f7f !important; color: #ffc207 !important; border-radius: 10px !important; border: 1px solid #333 !important; box-shadow: 0 0 20px rgba(0, 0, 0, 0.5) !important; }
         .flatpickr-day { color: #ffc207 !important; background-color: #333 !important; border-radius: 8px !important; }
         .flatpickr-day.selected { background-color: #ffc207 !important; color: #111 !important; }
         .flatpickr-day:hover { background-color: #444 !important; color: #ffc207 !important; }
