--- a/bucket/app/css/fw.css
+++ b/bucket/app/css/fw.css
@@ -25,3 +25,11 @@
 }
 
 .pTtl.itm{display:none;}
+
+/* Responsive layout for larger screens */
+@media (min-width: 1024px) {
+  .container {
+    grid-template-columns: 2fr 1fr; 
+    align-items: start; 
+  }
+}
