--- a/bucket/app/css/trip-page.css
+++ b/bucket/app/css/trip-page.css
@@ -61,7 +61,7 @@
 
       
 
-         #tripDate { font-size: 1em; border-radius: 8px; border: none; padding: 10px; width: 100%; text-align: center; box-sizing: border-box; }
+         #tripDate { background: #333; color: #ffc207; font-size: 1em; border-radius: 8px; border: none; padding: 10px; width: 100%; text-align: center; box-sizing: border-box; }
          /* === End Corrected Input and Select Styles === */
 
 
