--- a/bucket/admin/style.css
+++ b/bucket/admin/style.css
@@ -95,6 +95,16 @@ body {
     justify-content: center;
 }
 
+
+#sidebar .brand .bx img{
+    width: 60px;
+    height:60px;
+    display: flex;
+    justify-content: center;
+    border-radius:100%;
+}
+
+
 #sidebar .logo-container {
     display: flex;
     align-items: center;
