--- a/bucket/admin/style.css
+++ b/bucket/admin/style.css
@@ -96,14 +96,6 @@ body {
 }
 
 
-#sidebar .brand .bx img{
-    width: 50px;
-    height:50px;
-    display: flex;
-    justify-content: center;
-    border-radius: 50%;
-  object-fit: cover;
-}
 
 
 #sidebar .logo-container {
@@ -172,6 +164,20 @@ body {
     overflow-x: hidden;
     transition: all 0.3s ease;
 }
+
+
+#sidebar .side-menu li a img {
+    width: 50px;
+    height:50px;
+
+    justify-content: center;
+    border-radius: 50%;
+  object-fit: cover;
+}
+
+
+
+
 #sidebar .side-menu.top li.active a {
     color: var(--amber);
 }
