--- a/bucket/admin/style.css
+++ b/bucket/admin/style.css
@@ -167,9 +167,9 @@ body {
 
 
 #sidebar .side-menu li a img {
-    width: 40px;
-    height:40px;
-
+    width: 35px;
+    height:35px;
+margin-left:5px;
     justify-content: center;
     border-radius: 50%;
   object-fit: cover;
