--- a/bucket/admin/style.css
+++ b/bucket/admin/style.css
@@ -169,7 +169,7 @@ body {
 #sidebar .side-menu li a img {
     width: 35px;
     height:35px;
-margin-left:5px;
+margin-right:5px;
     justify-content: center;
     border-radius: 50%;
   object-fit: cover;
@@ -958,6 +958,7 @@ body.dark {
 
 .form-group input[type="text"],
 .form-group input[type="email"],
+.form-group input[type="phone"],
 .form-group input[type="password"] {
     width: 100%;
     padding: 10px 15px;
