--- a/bucket/admin/style.css
+++ b/bucket/admin/style.css
@@ -184,6 +184,16 @@ body {
     
 }
 
+#sidebar .side-menu li a img {
+    width: 40px;
+    height:40px;
+    margin-right:8px;
+    
+}
+
+
+
+
 /* CONTENT */
 #content {
     position: relative;
