--- a/bucket/admin/style.css
+++ b/bucket/admin/style.css
@@ -376,7 +376,7 @@ body {
   
     .filter-bar2 {
             flex-direction: column;
-            gap: 0.5rem;
+            gap: 1rem;
         }
         
         @media (min-width: 640px) {
@@ -395,6 +395,7 @@ body {
     margin-bottom: 24px;
     gap: 10px;
     scrollbar-width: none;
+  white-space: nowrap;
 }
 
 .filter-bar::-webkit-scrollbar {
