--- a/bucket/admin/style.css
+++ b/bucket/admin/style.css
@@ -19,7 +19,7 @@ li {
     --lato: 'Lato', sans-serif;
     
     /* Dark mode colors only */
-    --light: #0C0C1E;
+    --light: #1A1A2E;
     --grey: #060714;
     --dark: #FBFBFB;
     --dark-grey: #7E7E7E;
